0.0.4-dev

 * Added a troubleshooting section with steps to deal with broken pipes.
 * Added nosetests config file (setup.cfg) with defaults.

0.0.3

 * After pruning, run attic's consistency checks on all archives.
 * Integration tests for argument parsing.
 * Documentation updates about repository encryption.

0.0.2

 * Configuration support for additional attic prune flags: keep_within, keep_hourly, keep_yearly,
   and prefix.

0.0.1

 * Initial release.